--- a/my-frist-web-page.html
+++ b/my-frist-web-page.html
@@ -4,7 +4,9 @@
     <title>MY First Web Page</title>
 </head>
 <body>
-    <h1>Username: jk347</h1>
-    <h2>Course: IS117-002</h2>
+    <h1>Name: Janki Khatri</h1>
+    <h2>Username: jk347</h2>
+    <h2>Course: Introduction to Website Development</h2>
+    <h3>Course Number: IS117-002</h3>
 </body>
 </html>
